--- a/primeirapagina.html
+++ b/primeirapagina.html
@@ -1,10 +1,13 @@
 <html>
   <head>
     <title> Projeto_De_Programação_2024 </title>
+    <h1 class='menu'> projeto_De_Programação_2024 </h1>
+    <ul>
+      <li class='menu-escola'> Escola </li>
+      <li class='estudante'> Estudante </li>
+      <li class='professor'> Professor </li>
+    </ul>
   </head>
   <body>
-    <h1 class='menu'> projeto_De_Programação_2024 </h1>
-    <h4 class='menu-estudantes'> Estudantes </h4>
-    <h4 class='menu-professores'> Professores</h4>
   </body>
 </html>
