--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <header class="cabecalho">
-      
+      <img class="cabecalho-imagem" src="alurastart_logo.png">
       <ul class="cabecalho-lista">
         <li class="cabecalhi-lista-item">Escola</li>
         <li class="cabecalhi-lista-item">Estudante</li>
