--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,9 @@
       <img class="cabecalho-imagem" src="alurastart_logo.png">
       <ul class="cabecalho-lista">
         <li class="cabecalhi-lista-item">Escola</li>
+        <img class="imagem-escola" src="icons8-escola-64.png">
         <li class="cabecalhi-lista-item">Estudante</li>
+        <img class="imagem-estudante" src="icons8-homem-estudante-64.png">
       </ul>
     </header>
     <section class="escola">
