--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="script" href="funcoes_javascript.js">
     <title>Projeto Programação 2024</title>
   </head>
   <body>
