--- a/calculadora.html
+++ b/calculadora.html
@@ -9,5 +9,15 @@
     <button type='button' id='subtracao' onclick='-'>-</button>
     <button type='button' id='multiplic' onclick='*'>*</button>
     <button type='button' id='divisao' onclick='/'>/</button>
+    <button type='button' id='zero' onclick='0'>/</button>
+    <button type='button' id='um' onclick='1'>/</button>
+    <button type='button' id='dois' onclick='2'>/</button>
+    <button type='button' id='tres' onclick='3'>/</button>
+    <button type='button' id='quatro' onclick='4'>/</button>
+    <button type='button' id='cinco' onclick='5'>/</button>
+    <button type='button' id='seis' onclick='6'>/</button>
+    <button type='button' id='sete' onclick='7'>/</button>
+    <button type='button' id='oito' onclick='8'>/</button>
+    <button type='button' id='nove' onclick='9'>/</button>
   </body>
 </html>
