--- a/calculadora.html
+++ b/calculadora.html
@@ -1,23 +1,45 @@
 <html>
-  <head>
-    <title>Calculadora Teste</title>
-  </head>
-  <body>
-    <p class="texto.apresentacao">Essa será nossa calculadora baseada em JavaScript.</p>
-    <button type='button' id='igual' onclick='='>=</button>
-    <button type='button' id='adicao' onclick='+'>+</button>
-    <button type='button' id='subtracao' onclick='-'>-</button>
-    <button type='button' id='multiplic' onclick='*'>*</button>
-    <button type='button' id='divisao' onclick='/'>/</button>
-    <button type='button' id='zero' onclick='0'>/</button>
-    <button type='button' id='um' onclick='1'>/</button>
-    <button type='button' id='dois' onclick='2'>/</button>
-    <button type='button' id='tres' onclick='3'>/</button>
-    <button type='button' id='quatro' onclick='4'>/</button>
-    <button type='button' id='cinco' onclick='5'>/</button>
-    <button type='button' id='seis' onclick='6'>/</button>
-    <button type='button' id='sete' onclick='7'>/</button>
-    <button type='button' id='oito' onclick='8'>/</button>
-    <button type='button' id='nove' onclick='9'>/</button>
-  </body>
+	<head>
+		<title>Calculadora Teste</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<p class="texto-apresentacao">Essa será nossa calculadora baseada em JavaScript.</p>
+		<div class='calculadora'>
+			<div class='display'>
+				<input id='display' placeholder='0' disabled>
+				<h2 id='historico'></h2>
+			</div>
+			<div class='linha'>
+				<button class='ce' onclick='limpar()'>CE</button>
+				<button class='c' onclick='limpar()'>C</button>
+				<button class='percent' onclick='percentual()'>%</button>
+				<button class='divisao' onclick='add_operador("/")'>/</button>
+			</div>
+			<div class='linha'>
+				<button type='button' id='7' onclick='7'>7</button>
+				<button type='button' id='8' onclick='8'>8</button>
+				<button type='button' id='9' onclick='9'>9</button>
+				<button type='button' id='multiplic' onclick='*'>X</button>
+			</div>
+			<div class='linha'>
+				<button type='button' id='4' onclick='4'>4</button>
+				<button type='button' id='5' onclick='5'>5</button>
+				<button type='button' id='6' onclick='6'>6</button>
+				<button type='button' id='subtracao' onclick='-'>-</button>
+			</div>
+			<div class='linha'>
+				<button type='button' id='1' onclick='1'>1</button>
+				<button type='button' id='2' onclick='2'>2</button>
+				<button type='button' id='3' onclick='3'>3</button>
+				<button type='button' id='adicao' onclick='+'>+</button>
+			</div>
+			<div class='linha'>
+				<button type='button' id='+/-' onclick='+/-'>+/-</button>
+				<button type='button' id='0' onclick='0'>0</button>
+				<button type='button' id=',' onclick=','>,</button>
+				<button type='button' id='igual' onclick='='>=</button>
+			</div>
+		</div>
+	</body>	
 </html>
